Add jdtls wrapper params